fix highcontrastinverse.css star color

--- a/data/ui/gtk3/css/softwarecenter.highcontrastinverse.css
+++ b/data/ui/gtk3/css/softwarecenter.highcontrastinverse.css
@@ -1,10 +1,6 @@
-.featured-star-full {
+#featured-star {
     border-color: #ED0000;      /* darkish red */
-    background-color: #ED0000   /* darkish red */
-}
-
-.featured-star-empty {
-    border-color: #ED0000;  /* darkish red */
+    color: #ED0000   /* darkish red */
 }
 
 .cellrenderer-button {
